2013-03-15 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/*: added first version of new mobile console.
	
2013-03-15 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/jquery.form.js: updated to last version.
	
	* include/functions_reporting.php, include/functions_groups.php:
	added changes for to get the data as hash instead a html.

2013-03-15 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_events.php, include/functions_html.php,
	include/functions_graph.php, include/functions_reporting.php,
	operation/events/events_list.php, operation/events/events.php,
	operation/agentes/group_view.php: improved source code style.

2013-03-15 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/massive/massive_copy_modules.php: uploaded lost changes
	for previous fixed (days ago).
	
	* godmode/groups/group_list.php, include/graphs/functions_flot.php,
	include/graphs/fgraph.php, include/functions_agents.php,
	general/logon_ok.php: cleaned source code style.

2013-03-15  Mario Pulido <mario.pulido@artica.es>

	* include/help/en/help_plugin_policy.php
	include/help/es/help_plugin_policy.php: Added plugin policy help.

2013-03-15  Mario Pulido <mario.pulido@artica.es>

	* include/help/en/help_performance.php, include/help/es/help_performance.php
 	godmode/setup/setup.php: Add help in performance configuration.


2013-03-15  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_ui.php
	  operation/agentes/status_monitor: Added popup with data
	module, remove column 'tags' and changed font size to
	column 'timestamp'.

2013-03-15  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_treeview.php
	  include/functions_ui.php
	  include/ajax/module.php
	  include/javascript/pandora_modules.js
	  operation/tree.php: Added popup with data
	module.

2013-03-15 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Improved performance of
	get_tree_agents() API by omitting unnecessary data copies and