@@ -1,3 +1,9 @@
+2013-03-16  Junichi Satoh  <junichi@rworks.jp>
+
+	* pandoradb_data.sql, pandoradb.data.postgreSQL.sql,
+	pandoradb.data.oracle.sql: Fixed a typo in the description of
+	Internal Audit.
+
 2013-03-15 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* mobile/*: added first version of new mobile console.
